_sass/_issue.scss
.issues-landing-content {
  h2 {
    @include sans-serif-font-stack;
    color: $headerColor;
    font: {
      size: 2em; // 32px
      weight: bold;
    }
    margin: 1em auto;
  }

  ul {
    list-style-type: none;
    margin: 0;
    padding: 0;

    li {
      margin: 0;
      padding: 0;

      a {
        background-color: transparent;
        border: {
          color: transparent;
          style: solid;
          width: 2px 0 0 0;
        }
        display: block;
        padding: .5em;
        text-decoration: none;

        &:hover {
          &.issue-1-1 {
            border-color: $issue11AccentColor;
            background-color: $issue11BackgroundColor;
          }
          &.issue-1-2 {
            border-color: $issue12AccentColor;
            background-color: $issue12BackgroundColor;
          }
          &.issue-1-3 {
            border-color: $issue13AccentColor;
            background-color: $issue13BackgroundColor;
          }
          &.issue-1-4 {
            border-color: $issue14AccentColor;
            background-color: $issue14BackgroundColor;
          }
          &.issue-2-1 {
            border-color: $issue21AccentColor;
            background-color: $issue21BackgroundColor;
          }
          &.issue-2-2 {
            border-color: $issue22AccentColor;
            background-color: $issue22BackgroundColor;
          }
          &.issue-2-3 {
            border-color: $issue23AccentColor;
            background-color: $issue23BackgroundColor;
          }
          &.issue-2-4 {
            border-color: $issue24AccentColor;
            background-color: $issue24BackgroundColor;
          }
        }
      }

      .cover {
        display: block;
        float: left;
        padding-right: 1em;
        vertical-align: top;
      }

      .details {
        display: block;
        color: $textColor;
        vertical-align: top;

        h3 {
          @include sans-serif-font-stack;
          color: $headerColor;
          font: {
            size: 1.5em; // 24px
            weight: bold;
          }
          margin-bottom: 0;
        }

        p.metadata {
          @include sans-serif-font-stack;
          color: $deemphasizedColor;
          margin-top: 0;
        }

        p.blurb {
          font-size: 1.25em; // 20px
          margin: 1em auto 1.5em auto;
        }
      }
    }
  }
}

.issue-frontmatter-content {
  padding: 2em 0;

  div.header {
    border: {
      color: $accentColor;
      style: dotted;
      width: 0 0 1px 0;
    }
    margin-bottom: 3em;
    padding-bottom: 2em;

    div.details {
      padding-top: 1em;
      margin-left: 300px;
    }

    h2 {
      @include sans-serif-font-stack;
      color: $headerColor;
      font: {
        size: 2em; // 32px
        weight: bold;
      }
      margin: 0 auto 1em auto;
    }

    p.metadata {
      @include sans-serif-font-stack;
      color: $deemphasizedColor;
      font: {
        size: 1em;
      }
      line-height: 150%;
      margin-top: -2em;
    }

    p.archive {
      @include sans-serif-font-stack;
      border: 1px dotted $accentColor;
      margin: 2em auto;
      padding: .5em 1em;
      text-align: center;

      a {
        color: $accentColor;
        font-weight: bold;
        text-decoration: none;

        &:hover {
          text-decoration: underline;
        }
      }
    }

    ul.personnel {
      @include sans-serif-font-stack;
      list-style-type: none;
      padding-left: 0;

      li {
        margin-bottom: .5em;
      }

      span.position {
        font-weight: bold;
      }
    }
    
    div.cover {
      float: left;

      img {
        max-height: 400px;
      }
    }
  }

  div.table-of-contents {
    margin-top: 2em;

    h3 {
      @include sans-serif-font-stack;
      color: $headerColor;
      font-weight: bold;
    }

    ul {
      list-style-type: none;
      margin: 1em auto 2em auto;
      padding-left: 0;

      li {
        margin-bottom: 1em;

        span.number {
          display: block;
          font: {
            size: 1.5em;
            weight: bold;
          }
          float: left;
          margin-right: .5em;
          text-align: right;
          vertical-align: middle;
          width: 1.5em;
        }

        div.details {
          display: block;
          margin-left: 1.5em;
          vertical-align: top;

          span.title {
            display: block;
            font: {
              size: 1.25em;
              weight: bold;
            }
            line-height: 125%;

            a {
              color: $headerColor;
              text-decoration: none;

              &:hover {
                text-decoration: underline;
              }
            }
          }

          span.authors {
            @include sans-serif-font-stack;
            color: $deemphasizedColor;
            display: block;
            font-size: .8em;
          }
        }
      }
    }
  }
}

